# cmake-cookbook

./: .gitmodules  LICENSE
01_cmake_basics/: CMakeLists.txt  README.md  main.cpp
02_cmake_libraries/: README.md
02_cmake_libraries/build_lib/: CMakeLists.txt  adder.cpp  adder.h
02_cmake_libraries/using_lib/: CMakeLists.txt
03_cmake_submodules/: CMakeLists.txt  README.md
04_cmake_versioning/: CMakeLists.txt  HelloConfig.h.in  README.md  main.cpp
05_cmake_Libs_optional/: CMakeLists.txt  README.md  main.cpp
06_cmake_installation/: CMakeLists.txt  HelloConfig.h.in  License.txt  README.md  main.cpp
